--- a/src/views/reference_v2.ejs
+++ b/src/views/reference_v2.ejs
@@ -39,7 +39,7 @@
                             <h2 class="ml-4">Electrical Components International</h2>
                         </div>
                         <div class="row">
-                            <h3 class="ml-4">Operator: <%= locals.User %></h2>
+                            <h3 class="ml-4">System zbierania danych</h2>
                                 <h3 id="ActualDate" class="ml-auto mr-2">
                                     </h2>
                         </div>
