--- a/src/views/main.ejs
+++ b/src/views/main.ejs
@@ -124,11 +124,11 @@
                     <span class="info-box-icon bg-info"><i class="far fa-clock"></i></span>
                     <div class="info-box-content">
                       <span class="info-box-text">
-                        <h2><b>Czas produkcji: </b></h2>
+                        <h2><b>Referencyjny Czas produkcji: </b></h2>
                       </span>
                       <span class="info-box-number">
                         <h3 id="ReferenceProductionTime" class="mb-0">
-                          Referencyjny: <%= locals.ReferenceTime %> 2 godz. 30 min. 20 sek.
+                          <%= locals.ReferenceTime %> 2 godz. 30 min. 20 sek.
                         </h3>
                       </span>
                     </div>
