--- a/src/views/main.ejs
+++ b/src/views/main.ejs
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-  <title>ECI ERP</title>
+  <title>ECI MES</title>
 
   <link rel="icon" href="../img/eci_logo.png">
   <!-- Font Awesome Icons -->
