--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -39,7 +39,7 @@
             <!-- /.login-logo -->
             <div class="card">
                 <div class="card-body login-card-body">
-                    <p class="login-box-msg">Zeskanuj kod operatora lub wybierz operatora z listy!</p>
+                    <p class="login-box-msg">Zeskanuj kod operatora<br> lub<br> wybierz operatora z listy:</p>
 
                     <form autocomplete="off" action="/login" method="post">
                         <div class="input-group mb-3">
@@ -53,7 +53,7 @@
                         </div>
                         <!-- /.col -->
                         <div class="col-sm-12">
-                            <button type="submit" class="btn btn-primary btn-block mb-2">Zaloguj się!</button>
+                            <button type="submit" class="btn btn-primary btn-block mb-2">Zaloguj się</button>
                             <p id="errorText" class="mb-0" style='color: red; text-align: center;'>
                                 <%= locals.error %>
                             </p>
