--- a/src/views/oee.ejs
+++ b/src/views/oee.ejs
@@ -487,7 +487,7 @@
             OperatorTargetTime += OperatorChartData[i].RealTime;
             OperatorTargetTime += OperatorChartData[i].TargetTime;
           }
-          OperatorPerformance = (OperatorTargetTime / OperatorTargetTime * 100).toFixed(1)
+          OperatorPerformance = (OperatorTargetTime / OperatorWorkTime * 100).toFixed(1)
           if (OperatorPerformance == "NaN")
             OperatorPerformance = "0.0"
           $('#OperatorPerformance').text("WYDAJNOŚĆ OPERATORA: " + OperatorPerformance + " %")
